# jukebox

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
assets/: jukebox.icns
public/: 404.html  index.html
script/: bundle  generate-launchd
src/: app.rs  card.rs  cast.rs  cli.rs  console.rs  lib.rs  local.rs  main.rs  player.rs  progress.rs  spotify.rs  token.rs  web.rs  window.rs
src/player/: playable.rs  progress.rs  time.rs
src/spotify/: client.rs  models.rs  playable.rs  uri.rs
ui/: appwindow.slint
