[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-html = { version = "0.2.2" }
anyhow = { version = "1.0.93" }
axum = { version = "0.7.7" }
clap = { version = "4.5.23", features = ["derive", "env"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
pcsc = { version = "2.8.2" }
rand = { version = "0.8.5" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.133" }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1.41" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19" }
url = { version = "2.5.4" }
