[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-html = { version = "0.2.2" }
anyhow = { version = "1.0.99" }
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1" }
clap = { version = "4.5.47", features = ["derive", "env"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
pcsc = { version = "2.9.0" }
rand = { version = "0.9.2" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1.41" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20" }
url = { version = "2.5.7" }
